--- a/pickify-frontend/manifest.json
+++ b/pickify-frontend/manifest.json
@@ -7,6 +7,7 @@
     "service_worker": "background.js"
   },
   "permissions": ["activeTab", "scripting", "sidePanel", "storage", "tabs"],
+  "host_permissions": ["<all_urls>"],
   "side_panel": {
     "default_path": "sidepanel/index.html"
   },
